// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal selector should return modal selector state and actions 1`] = `
{
  "closeModal": [Function],
  "modalData": {
    "message": "",
    "onModalClose": [Function],
    "onPrimaryButtonClick": [Function],
    "primaryButtonLabel": "",
    "title": "",
  },
  "openModal": [Function],
  "openState": "CLOSE",
}
`;

exports[`Modal selector should return modal state on modal data set using openModal 1`] = `
{
  "message": "message",
  "onModalClose": [MockFunction],
  "onPrimaryButtonClick": [MockFunction],
  "primaryButtonLabel": "primaryButtonLabel",
  "title": "title",
}
`;

exports[`Modal selector should return modal state with initial value 1`] = `
{
  "message": "",
  "onModalClose": [Function],
  "onPrimaryButtonClick": [Function],
  "primaryButtonLabel": "",
  "title": "",
}
`;
